lib/tools/orbit/test_output/ograph_demo.output
QStandardPaths: wrong permissions on runtime directory /run/user/1000/, 0755 instead of 0700
Flow compiler (3rd generation)

Processing 'orbit' on http server
done in 0.12s

tests/ograph_demo.orb: tests/ograph_demo.orb:59:20: Parse error
printOGraph(graph);
                   ^
app->exec() == 1
